--- a/assets/style/registration.css
+++ b/assets/style/registration.css
@@ -10,7 +10,7 @@ body {
     margin: 0;
 }
 
-.sign-in-container {
+.sign-up-container {
     background: #efefee;
     height: 100vh;
     display: flex;
@@ -25,6 +25,7 @@ body {
     width: 450px;
     box-shadow: rgba(0, 0, 0, 0.1) 0 1px 2px;
     padding: 20px 35px;
+    overflow-y: auto;
 }
 
 .column form {
@@ -73,4 +74,9 @@ body {
 
 #site-logo {
     width: 130px;
+}
+
+.sign-in-message {
+    font-size: 14px;
+    font-weight: bold;
 }
